src/components/dashboards/DashboardSider.scss
.dashboard-sider {
  background: unset;
  padding: 6px;
  padding-top: 24px;
  border-inline-end: 1px solid rgba(5, 5, 5, 0.06);

  h3 {
    padding-left: 20px;
    margin-top: 0;
    margin-bottom: 10px;
  }

  .ant-layout-sider-children .dashboard-sider-menu {
    background: unset;
    border-inline-end: unset;

    .ant-menu-item-group-title {
      padding-left: 20px;
      padding-top: 16px;
      padding-bottom: 2px;
    }

    .ant-menu-item {
      height: 32px;
      line-height: 32px;
      width: unset;
      margin: 2px;
      padding-left: 20px !important;
    }
  }
}

